[package]
name = "rust-learn"
version = "0.1.0"
authors = ["jojo-f <jojo@dcpt.online>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
hello_macro_derive={path = "./hello_macro_derive"}

[profile.release]
# abort 意为直接退出而不清理内存
panic = 'abort'

[workspace]
members = [
    "about_net",
    "hello",
    "db",
    "json_data",
    "restaurant",
    "module",
    "learn_tokio"
]
